xpath/compiler/XPath20Parser.py
# Generated from .\xpath\xpathgrammer\XPath20.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class XPath20Parser ( Parser ):

    grammarFileName = "XPath20.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'@'", "'!'", "']'", "'}'", "':='", "':'", 
                     "'::'", "','", "')'", "':*'", "'.'", "'..'", "'$'", 
                     "'=>'", "'='", "'>='", "'>>'", "'>'", "'<='", "'<<'", 
                     "'<'", "'-'", "'!='", "'['", "'{'", "'('", "'|'", "'+'", 
                     "'#'", "'||'", "'?'", "'*:'", "'/'", "'//'", "'*'", 
                     "'ancestor'", "'ancestor-or-self'", "'and'", "'array'", 
                     "'as'", "'attribute'", "'cast'", "'castable'", "'child'", 
                     "'comment'", "'descendant'", "'descendant-or-self'", 
                     "'div'", "'document-node'", "'element'", "'else'", 
                     "'empty-sequence'", "'eq'", "'every'", "'except'", 
                     "'following'", "'following-sibling'", "'for'", "'function'", 
                     "'ge'", "'gt'", "'idiv'", "'if'", "'in'", "'instance'", 
                     "'intersect'", "'is'", "'item'", "'le'", "'let'", "'lt'", 
                     "'map'", "'mod'", "'namespace'", "'namespace-node'", 
                     "'ne'", "'node'", "'of'", "'or'", "'parent'", "'preceding'", 
                     "'preceding-sibling'", "'processing-instruction'", 
                     "'return'", "'satisfies'", "'schema-attribute'", "'schema-element'", 
                     "'self'", "'some'", "'text'", "'then'", "'to'", "'treat'", 
                     "'union'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "';'" ]

    symbolicNames = [ "<INVALID>", "AT", "BANG", "CB", "CC", "CEQ", "COLON", 
                      "COLONCOLON", "COMMA", "CP", "CS", "D", "DD", "DOLLAR", 
                      "EG", "EQ", "GE", "GG", "GT", "LE", "LL", "LT", "MINUS", 
                      "NE", "OB", "OC", "OP", "P", "PLUS", "POUND", "PP", 
                      "QM", "SC", "SLASH", "SS", "STAR", "KW_ANCESTOR", 
                      "KW_ANCESTOR_OR_SELF", "KW_AND", "KW_ARRAY", "KW_AS", 
                      "KW_ATTRIBUTE", "KW_CAST", "KW_CASTABLE", "KW_CHILD", 
                      "KW_COMMENT", "KW_DESCENDANT", "KW_DESCENDANT_OR_SELF", 
                      "KW_DIV", "KW_DOCUMENT_NODE", "KW_ELEMENT", "KW_ELSE", 
                      "KW_EMPTY_SEQUENCE", "KW_EQ", "KW_EVERY", "KW_EXCEPT", 
                      "KW_FOLLOWING", "KW_FOLLOWING_SIBLING", "KW_FOR", 
                      "KW_FUNCTION", "KW_GE", "KW_GT", "KW_IDIV", "KW_IF", 
                      "KW_IN", "KW_INSTANCE", "KW_INTERSECT", "KW_IS", "KW_ITEM", 
                      "KW_LE", "KW_LET", "KW_LT", "KW_MAP", "KW_MOD", "KW_NAMESPACE", 
                      "KW_NAMESPACE_NODE", "KW_NE", "KW_NODE", "KW_OF", 
                      "KW_OR", "KW_PARENT", "KW_PRECEDING", "KW_PRECEDING_SIBLING", 
                      "KW_PROCESSING_INSTRUCTION", "KW_RETURN", "KW_SATISFIES", 
                      "KW_SCHEMA_ATTRIBUTE", "KW_SCHEMA_ELEMENT", "KW_SELF", 
                      "KW_SOME", "KW_TEXT", "KW_THEN", "KW_TO", "KW_TREAT", 
                      "KW_UNION", "IntegerLiteral", "DecimalLiteral", "DoubleLiteral", 
                      "StringLiteral", "URIQualifiedName", "BracedURILiteral", 
                      "Comment", "QName", "NCName", "Whitespace", "SEMI" ]

    RULE_xpath = 0
    RULE_expr = 1
    RULE_exprsingle = 2
    RULE_forexpr = 3
    RULE_simpleforclause = 4
    RULE_quantifiedexpr = 5
    RULE_ifexpr = 6
    RULE_orexpr = 7
    RULE_andexpr = 8
    RULE_comparisonexpr = 9
    RULE_rangeexpr = 10
    RULE_additiveexpr = 11
    RULE_multiplicativeexpr = 12
    RULE_unionexpr = 13
    RULE_intersectexceptexpr = 14
    RULE_instanceofexpr = 15
    RULE_treatexpr = 16
    RULE_castableexpr = 17
    RULE_castexpr = 18
    RULE_unaryexpr = 19
    RULE_valueexpr = 20
    RULE_generalcomp = 21
    RULE_valuecomp = 22
    RULE_nodecomp = 23
    RULE_pathexpr = 24
    RULE_relativepathexpr = 25
    RULE_stepexpr = 26
    RULE_axisstep = 27
    RULE_forwardstep = 28
    RULE_forwardaxis = 29
    RULE_abbrevforwardstep = 30
    RULE_reversestep = 31
    RULE_reverseaxis = 32
    RULE_abbrevreversestep = 33
    RULE_nodetest = 34
    RULE_nametest = 35
    RULE_wildcard = 36
    RULE_filterexpr = 37
    RULE_predicatelist = 38
    RULE_predicate = 39
    RULE_primaryexpr = 40
    RULE_literal = 41
    RULE_numericliteral = 42
    RULE_varref = 43
    RULE_varname = 44
    RULE_parenthesizedexpr = 45
    RULE_contextitemexpr = 46
    RULE_functioncall = 47
    RULE_singletype = 48
    RULE_sequencetype = 49
    RULE_occurrenceindicator = 50
    RULE_itemtype = 51
    RULE_atomictype = 52
    RULE_kindtest = 53
    RULE_anykindtest = 54
    RULE_documenttest = 55
    RULE_texttest = 56
    RULE_commenttest = 57
    RULE_pitest = 58
    RULE_attributetest = 59
    RULE_attribnameorwildcard = 60
    RULE_schemaattributetest = 61
    RULE_attributedeclaration = 62
    RULE_elementtest = 63
    RULE_elementnameorwildcard = 64
    RULE_schemaelementtest = 65
    RULE_elementdeclaration = 66
    RULE_attributename = 67
    RULE_elementname = 68
    RULE_typename_ = 69
    RULE_qname = 70
    RULE_auxilary = 71

    ruleNames =  [ "xpath", "expr", "exprsingle", "forexpr", "simpleforclause", 
                   "quantifiedexpr", "ifexpr", "orexpr", "andexpr", "comparisonexpr", 
                   "rangeexpr", "additiveexpr", "multiplicativeexpr", "unionexpr", 
                   "intersectexceptexpr", "instanceofexpr", "treatexpr", 
                   "castableexpr", "castexpr", "unaryexpr", "valueexpr", 
                   "generalcomp", "valuecomp", "nodecomp", "pathexpr", "relativepathexpr", 
                   "stepexpr", "axisstep", "forwardstep", "forwardaxis", 
                   "abbrevforwardstep", "reversestep", "reverseaxis", "abbrevreversestep", 
                   "nodetest", "nametest", "wildcard", "filterexpr", "predicatelist", 
                   "predicate", "primaryexpr", "literal", "numericliteral", 
                   "varref", "varname", "parenthesizedexpr", "contextitemexpr", 
                   "functioncall", "singletype", "sequencetype", "occurrenceindicator", 
                   "itemtype", "atomictype", "kindtest", "anykindtest", 
                   "documenttest", "texttest", "commenttest", "pitest", 
                   "attributetest", "attribnameorwildcard", "schemaattributetest", 
                   "attributedeclaration", "elementtest", "elementnameorwildcard", 
                   "schemaelementtest", "elementdeclaration", "attributename", 
                   "elementname", "typename_", "qname", "auxilary" ]

    EOF = Token.EOF
    AT=1
    BANG=2
    CB=3
    CC=4
    CEQ=5
    COLON=6
    COLONCOLON=7
    COMMA=8
    CP=9
    CS=10
    D=11
    DD=12
    DOLLAR=13
    EG=14
    EQ=15
    GE=16
    GG=17
    GT=18
    LE=19
    LL=20
    LT=21
    MINUS=22
    NE=23
    OB=24
    OC=25
    OP=26
    P=27
    PLUS=28
    POUND=29
    PP=30
    QM=31
    SC=32
    SLASH=33
    SS=34
    STAR=35
    KW_ANCESTOR=36
    KW_ANCESTOR_OR_SELF=37
    KW_AND=38
    KW_ARRAY=39
    KW_AS=40
    KW_ATTRIBUTE=41
    KW_CAST=42
    KW_CASTABLE=43
    KW_CHILD=44
    KW_COMMENT=45
    KW_DESCENDANT=46
    KW_DESCENDANT_OR_SELF=47
    KW_DIV=48
    KW_DOCUMENT_NODE=49
    KW_ELEMENT=50
    KW_ELSE=51
    KW_EMPTY_SEQUENCE=52
    KW_EQ=53
    KW_EVERY=54
    KW_EXCEPT=55
    KW_FOLLOWING=56
    KW_FOLLOWING_SIBLING=57
    KW_FOR=58
    KW_FUNCTION=59
    KW_GE=60
    KW_GT=61
    KW_IDIV=62
    KW_IF=63
    KW_IN=64
    KW_INSTANCE=65
    KW_INTERSECT=66
    KW_IS=67
    KW_ITEM=68
    KW_LE=69
    KW_LET=70
    KW_LT=71
    KW_MAP=72
    KW_MOD=73
    KW_NAMESPACE=74
    KW_NAMESPACE_NODE=75
    KW_NE=76
    KW_NODE=77
    KW_OF=78
    KW_OR=79
    KW_PARENT=80
    KW_PRECEDING=81
    KW_PRECEDING_SIBLING=82
    KW_PROCESSING_INSTRUCTION=83
    KW_RETURN=84
    KW_SATISFIES=85
    KW_SCHEMA_ATTRIBUTE=86
    KW_SCHEMA_ELEMENT=87
    KW_SELF=88
    KW_SOME=89
    KW_TEXT=90
    KW_THEN=91
    KW_TO=92
    KW_TREAT=93
    KW_UNION=94
    IntegerLiteral=95
    DecimalLiteral=96
    DoubleLiteral=97
    StringLiteral=98
    URIQualifiedName=99
    BracedURILiteral=100
    Comment=101
    QName=102
    NCName=103
    Whitespace=104
    SEMI=105

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class XpathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(XPath20Parser.ExprContext,0)


        def EOF(self):
            return self.getToken(XPath20Parser.EOF, 0)

        def getRuleIndex(self):
            return XPath20Parser.RULE_xpath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterXpath" ):
                listener.enterXpath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitXpath" ):
                listener.exitXpath(self)




    def xpath(self):

        localctx = XPath20Parser.XpathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_xpath)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.expr()
            self.state = 145
            self.match(XPath20Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprsingle(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XPath20Parser.ExprsingleContext)
            else:
                return self.getTypedRuleContext(XPath20Parser.ExprsingleContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(XPath20Parser.COMMA)
            else:
                return self.getToken(XPath20Parser.COMMA, i)

        def getRuleIndex(self):
            return XPath20Parser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = XPath20Parser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.exprsingle()
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==XPath20Parser.COMMA:
                self.state = 148
                self.match(XPath20Parser.COMMA)
                self.state = 149
                self.exprsingle()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprsingleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def forexpr(self):
            return self.getTypedRuleContext(XPath20Parser.ForexprContext,0)


        def quantifiedexpr(self):
            return self.getTypedRuleContext(XPath20Parser.QuantifiedexprContext,0)


        def ifexpr(self):
            return self.getTypedRuleContext(XPath20Parser.IfexprContext,0)


        def orexpr(self):
            return self.getTypedRuleContext(XPath20Parser.OrexprContext,0)


        def getRuleIndex(self):
            return XPath20Parser.RULE_exprsingle

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprsingle" ):
                listener.enterExprsingle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprsingle" ):
                listener.exitExprsingle(self)




    def exprsingle(self):

        localctx = XPath20Parser.ExprsingleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_exprsingle)
        try:
            self.state = 159
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.forexpr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.quantifiedexpr()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 157
                self.ifexpr()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 158
                self.orexpr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForexprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleforclause(self):
            return self.getTypedRuleContext(XPath20Parser.SimpleforclauseContext,0)


        def KW_RETURN(self):
            return self.getToken(XPath20Parser.KW_RETURN, 0)

        def exprsingle(self):
            return self.getTypedRuleContext(XPath20Parser.ExprsingleContext,0)


        def getRuleIndex(self):
            return XPath20Parser.RULE_forexpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForexpr" ):
                listener.enterForexpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForexpr" ):
                listener.exitForexpr(self)




    def forexpr(self):

        localctx = XPath20Parser.ForexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_forexpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.simpleforclause()
            self.state = 162
            self.match(XPath20Parser.KW_RETURN)
            self.state = 163
            self.exprsingle()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleforclauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_FOR(self):
            return self.getToken(XPath20Parser.KW_FOR, 0)

        def DOLLAR(self, i:int=None):
            if i is None:
                return self.getTokens(XPath20Parser.DOLLAR)
            else:
                return self.getToken(XPath20Parser.DOLLAR, i)

        def varname(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XPath20Parser.VarnameContext)
            else:
                return self.getTypedRuleContext(XPath20Parser.VarnameContext,i)


        def KW_IN(self, i:int=None):
            if i is None:
                return self.getTokens(XPath20Parser.KW_IN)
            else:
                return self.getToken(XPath20Parser.KW_IN, i)

        def exprsingle(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XPath20Parser.ExprsingleContext)
            else:
                return self.getTypedRuleContext(XPath20Parser.ExprsingleContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(XPath20Parser.COMMA)
            else:
                return self.getToken(XPath20Parser.COMMA, i)

        def getRuleIndex(self):
            return XPath20Parser.RULE_simpleforclause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleforclause" ):
                listener.enterSimpleforclause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleforclause" ):
                listener.exitSimpleforclause(self)




    def simpleforclause(self):
